# west-home

./: .gitignore  README.md  justfile  pyproject.toml
src/: 1_snowfall.py  README.md  constants.py  etl.py  plot.py  run.py  utils.py
tests/: test_utils.py
