[project]
name = "wes-home"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "geodatasets>=2024.8.0",
    "geopandas>=1.1.1",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "structlog>=25.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
